DriverExtension增加权限限制
Signed-off-by: lixinsheng2 <lixinsheng2@huawei.com>

--- a/frameworks/native/ability/native/etc/extension_blocklist_config.json
+++ b/frameworks/native/ability/native/etc/extension_blocklist_config.json
@@ -158,6 +158,105 @@
             "application.formInfo",
             "application.formProvider"
         ],
-        "DriverExtension": []
+        "DriverExtension": [
+            "abilityAccessCtrl",
+            "ability.particleAbility",
+            "accessibility.config",
+            "account.appAccount",
+            "account.distributedAccount",
+            "account.osAccount",
+            "app.ability.abilityManager",
+            "app.ability.appManager",
+            "app.ability.missionManager",
+            "app.ability.quickFixManager",
+            "app.form.formHost",
+            "application.abilityManager",
+            "application.appManager",
+            "application.formError",
+            "application.formHost",
+            "application.missionManager",
+            "backgroundTaskManager",
+            "bluetooth",
+            "bluetoothManager",
+            "bundle",
+            "bundle.appControl",
+            "bundle.bundleManager",
+            "bundle.defaultAppManager",
+            "bundle.distributedBundleManager",
+            "bundle.freeInstall",
+            "bundle.innerBundleManager",
+            "bundle.installer",
+            "bundle.launcherBundleManager",
+            "bundleState",
+            "connectedTag",
+            "contact",
+            "Context",
+            "continuation.continuationManager",
+            "data.distributedData",
+            "data.distributedDataObject",
+            "data.distributedKVStore",
+            "data.rdb",
+            "data.relationalStore",
+            "deviceInfo",
+            "distributedBundle",
+            "distributedMissionManager",
+            "enterprise.adminManager",
+            "enterprise.dateTimeManager",
+            "enterprise.deviceInfo",
+            "file.fileAccess",
+            "filemanagement.userFileManager",
+            "file.storageStatistics",
+            "file.volumeManager",
+            "geolocation",
+            "geoLocationManager",
+            "hidebug",
+            "hiSysEvent",
+            "inputMethod",
+            "multimedia.avsession",
+            "multimedia.camera",
+            "multimedia.media",
+            "multimedia.mediaLibrary",
+            "multimodalInput.inputMonitor",
+            "net.connection",
+            "net.ethernet",
+            "net.http",
+            "net.sharing",
+            "net.socket",
+            "net.webSocket",
+            "nfc.cardEmulation",
+            "nfc.controller",
+            "nfc.tag",
+            "notification",
+            "notificationManager",
+            "notificationSubscribe",
+            "power",
+            "privacyManager",
+            "reminderAgent",
+            "reminderAgentManager",
+            "request",
+            "resourceschedule.backgroundTaskManager",
+            "resourceschedule.usageStatistics",
+            "runningLock",
+            "screen",
+            "screenshot",
+            "sensor",
+            "settings",
+            "systemTime",
+            "telephony.call",
+            "telephony.data",
+            "telephony.observer",
+            "telephony.radio",
+            "telephony.sim",
+            "telephony.sms",
+            "update",
+            "userIAM.faceAuth",
+            "vibrator",
+            "wallpaper",
+            "wifi",
+            "wifiext",
+            "wifiManager",
+            "wifiManagerExt",
+            "window"
+        ]
     }
 }
