--- a/test/unittest/connection_observer_test/BUILD.gn
+++ b/test/unittest/connection_observer_test/BUILD.gn
@@ -22,9 +22,14 @@ ohos_unittest("connection_observer_test") {
   include_dirs = [
     "${ability_runtime_innerkits_path}/connectionobs_manager/include",
     "${ability_runtime_services_path}/common/include",
+    "${ability_runtime_innerkits_path}/ability_manager/include",
+    "${ability_runtime_test_path}/mock/common/include",
   ]
 
-  sources = [ "connection_observer_test.cpp" ]
+  sources = [
+    "${ability_runtime_test_path}/mock/common/src/mock_native_token.cpp",
+    "connection_observer_test.cpp",
+  ]
 
   configs = [ "${ability_runtime_innerkits_path}/connectionobs_manager:connection_obs_manager_public_config" ]
   cflags = []
@@ -39,6 +44,8 @@ ohos_unittest("connection_observer_test") {
 
   external_deps = [
     "ability_runtime:connection_obs_manager",
+    "access_token:libnativetoken",
+    "access_token:libtoken_setproc",
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
     "hilog:libhilog",
