Description: 轻量模拟上使用ark引擎提供的timer、console接口 IssueNo: #I818RI Sig: SIG_ApplicationFramework Feature or Bugfix: Bugfix Binary Source: No
Signed-off-by: yangzk <yangzhongkai@huawei.com>
Change-Id: If7e2241518338270ea515310355c4b5ac4971669

--- a/ability_runtime.gni
+++ b/ability_runtime.gni
@@ -28,6 +28,7 @@ simulator_path = "//foundation/ability/ability_runtime/frameworks/simulator"
 bundlefwk_path = "//foundation/bundlemanager/bundle_framework"
 bundlefwk_inner_api_path = "${bundlefwk_path}/interfaces/inner_api"
 c_utils_base_path = "//commonlibrary/c_utils/base"
+ets_utils_path = "//commonlibrary/ets_utils"
 print_fwk_path = "//base/print/print_fwk"
 imf_path = "//base/inputmethod/imf"
 wallpaper_mgr_path = "//base/theme/wallpaper_mgr"
