--- a/frameworks/simulator/BUILD.gn
+++ b/frameworks/simulator/BUILD.gn
@@ -167,6 +167,16 @@ ohos_copy("copy_ability_simulator") {
   sources += [ out_path + "/thirdparty/bounds_checking_function/libsec_shared" +
                dylib_suffix ]
 
+  deps += [ "${ets_utils_path}/js_sys_module/timer:timer" ]
+  out_path = get_label_info("${ets_utils_path}/js_sys_module/timer:timer",
+                            "root_out_dir")
+  sources += [ out_path + "/commonlibrary/ets_utils/libtimer" + dylib_suffix ]
+
+  deps += [ "${ets_utils_path}/js_sys_module/console:console" ]
+  out_path = get_label_info("${ets_utils_path}/js_sys_module/console:console",
+                            "root_out_dir")
+  sources += [ out_path + "/commonlibrary/ets_utils/libconsole" + dylib_suffix ]
+
   outputs = [ target_out_dir + "/bin/{{source_file_part}}" ]
   module_source_dir = target_out_dir + "/bin"
   module_install_name = ""
