--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -287,7 +287,12 @@ ohos_shared_library("abilitykit_native") {
 
   if (purgeable_ashmem_enable) {
     defines += [ "IMAGE_PURGEABLE_PIXELMAP" ]
-    external_deps += [ "memory_utils:libpurgeablemem" ]
+    if (defined(global_parts_info) &&
+        defined(global_parts_info.resourceschedule_memmgr_plugin)) {
+      external_deps += [ "memmgr_plugin:libpurgeablemem_plugin" ]
+    } else {
+      external_deps += [ "memory_utils:libpurgeablemem" ]
+    }
   }
 
   if (efficiency_manager) {
