--- a/frameworks/native/appkit/BUILD.gn
+++ b/frameworks/native/appkit/BUILD.gn
@@ -190,7 +190,12 @@ ohos_shared_library("appkit_native") {
 
   if (purgeable_ashmem_enable) {
     defines += [ "IMAGE_PURGEABLE_PIXELMAP" ]
-    external_deps += [ "memory_utils:libpurgeablemem" ]
+    if (defined(global_parts_info) &&
+        defined(global_parts_info.resourceschedule_memmgr_plugin)) {
+      external_deps += [ "memmgr_plugin:libpurgeablemem_plugin" ]
+    } else {
+      external_deps += [ "memory_utils:libpurgeablemem" ]
+    }
   }
 
   innerapi_tags = [ "platformsdk" ]
