--- a/interfaces/inner_api/app_manager/BUILD.gn
+++ b/interfaces/inner_api/app_manager/BUILD.gn
@@ -49,11 +49,16 @@ ohos_shared_library("app_manager") {
   sources = [
     "src/appmgr/ability_controller_proxy.cpp",
     "src/appmgr/ability_controller_stub.cpp",
+    "src/appmgr/ability_debug_response_proxy.cpp",
+    "src/appmgr/ability_debug_response_stub.cpp",
     "src/appmgr/ability_info_callback_proxy.cpp",
     "src/appmgr/ability_info_callback_stub.cpp",
     "src/appmgr/ability_state_data.cpp",
     "src/appmgr/ams_mgr_proxy.cpp",
     "src/appmgr/ams_mgr_stub.cpp",
+    "src/appmgr/app_debug_info.cpp",
+    "src/appmgr/app_debug_listener_proxy.cpp",
+    "src/appmgr/app_debug_listener_stub.cpp",
     "src/appmgr/app_launch_data.cpp",
     "src/appmgr/app_malloc_info.cpp",
     "src/appmgr/app_mgr_client.cpp",
