--- a/test/unittest/ams_ability_running_record_test/BUILD.gn
+++ b/test/unittest/ams_ability_running_record_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -28,6 +28,7 @@ ohos_unittest("AmsAbilityRunningRecordTest") {
   sources = [
     "${ability_runtime_services_path}/appmgr/src/ability_running_record.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_death_recipient.cpp",
+    "${ability_runtime_services_path}/appmgr/src/app_debug_manager.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_mgr_service_inner.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_running_record.cpp",
     "${ability_runtime_services_path}/appmgr/src/app_spawn_client.cpp",
