--- a/test/unittest/ability_runtime_error_util_test/BUILD.gn
+++ b/test/unittest/ability_runtime_error_util_test/BUILD.gn
@@ -24,7 +24,7 @@ ohos_unittest("ability_runtime_error_utils_test") {
 
   sources = [ "ability_runtime_error_util_test.cpp" ]
 
-  configs = []
+  configs = [ "${ability_runtime_services_path}/common:common_config" ]
 
   deps = [
     "${ability_runtime_innerkits_path}/error_utils:ability_runtime_error_util",
@@ -35,6 +35,8 @@ ohos_unittest("ability_runtime_error_utils_test") {
   external_deps = [
     "ability_base:want",
     "c_utils:utils",
+    "ets_runtime:libark_jsruntime",
+    "hilog:libhilog",
     "napi:ace_napi",
   ]
 }
