Set aot compiler callback.
Signed-off-by: zhangyafei.echo <zhangyafei12@huawei.com>
Change-Id: If3c3aaa9bbb43b831d8195cf7757bd6a5513d149

--- a/test/unittest/runtime_test/BUILD.gn
+++ b/test/unittest/runtime_test/BUILD.gn
@@ -79,6 +79,7 @@ ohos_unittest("js_runtime_test") {
   sources = [
     # add mock file
     "js_runtime_test.cpp",
+    "mock_jsnapi.cpp",
   ]
 
   configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
