--- a/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
+++ b/test/unittest/frameworks_kits_ability_native_test/BUILD.gn
@@ -689,6 +689,46 @@ ohos_unittest("ability_thread_test") {
   }
 }
 
+ohos_unittest("extension_ability_thread_test") {
+  module_out_path = module_output_path
+
+  sources = [ "extension_ability_thread_test.cpp" ]
+
+  configs = [ ":module_private_config" ]
+
+  deps = [
+    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
+    "${ability_runtime_native_path}/ability/native:ability_thread",
+    "${ability_runtime_native_path}/ability/native:abilitykit_native",
+    "${ability_runtime_native_path}/appkit:app_context",
+    "${ability_runtime_native_path}/appkit:appkit_native",
+  ]
+
+  external_deps = [
+    "ability_base:configuration",
+    "ability_base:want",
+    "ability_runtime:runtime",
+    "bundle_framework:appexecfwk_base",
+    "c_utils:utils",
+    "eventhandler:libeventhandler",
+    "hilog:libhilog",
+    "hitrace:hitrace_meter",
+    "ipc:ipc_core",
+    "napi:ace_napi",
+    "relational_store:native_appdatafwk",
+    "relational_store:native_rdb",
+    "resource_management:global_resmgr",
+  ]
+
+  if (ability_runtime_graphics) {
+    external_deps += [
+      "ability_base:session_info",
+      "input:libmmi-client",
+      "window_manager:libwm",
+    ]
+  }
+}
+
 ohos_unittest("service_extension_module_loader_test") {
   module_out_path = module_output_path
   include_dirs = [
@@ -2218,6 +2258,7 @@ group("unittest") {
     ":data_ability_result_test",
     ":data_uri_utils_test",
     ":distributed_client_test",
+    ":extension_ability_thread_test",
     ":extension_impl_test",
     ":extension_test",
     ":form_extension_test",
