--- a/test/unittest/uri_permission_test/BUILD.gn
+++ b/test/unittest/uri_permission_test/BUILD.gn
@@ -29,6 +29,7 @@ ohos_unittest("uri_permission_test") {
 
   deps = [
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
+    "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/uripermmgr:libupms_static",
   ]
 
