modify Notify's interface location
Signed-off-by: donglin <donglin9@huawei.com>
Change-Id: I29273b7ca0d98ae49a9430bb5773976d110a0f6c

--- a/frameworks/native/ability/BUILD.gn
+++ b/frameworks/native/ability/BUILD.gn
@@ -29,6 +29,7 @@ config("ability_context_public_config") {
     "${ability_runtime_path}/interfaces/kits/native/ability/ability_runtime",
     "${ability_runtime_path}/interfaces/kits/native/ability/ability_runtime/context",
     "${ability_runtime_path}/interfaces/kits/native/ability/native",
+    "${ability_runtime_path}/interfaces/app_manaegr/include/appmgr"
   ]
 
   cflags = []
@@ -61,6 +62,7 @@ ohos_shared_library("ability_context_native") {
     "${ability_runtime_native_path}/ability/native:dialog_request_callback",
     "${ability_runtime_native_path}/appkit:app_context",
     "${ability_runtime_native_path}/appkit:app_context_utils",
+    "${ability_runtime_innerkits_path}/app_manager:app_manager",
   ]
 
   external_deps = [
