--- a/test/unittest/BUILD.gn
+++ b/test/unittest/BUILD.gn
@@ -286,6 +286,8 @@ group("unittest") {
     "ability_connect_callback_stub_test:unittest",
     "ability_connect_manager_test:unittest",
     "ability_connection_test:unittest",
+    "ability_debug_response_proxy_test:unittest",
+    "ability_debug_response_stub_test:unittest",
     "ability_event_handler_test:unittest",
     "ability_extension_base_test:unittest",
     "ability_extension_context_test:unittest",
@@ -332,7 +334,9 @@ group("unittest") {
     "ams_service_event_drive_test:unittest",
     "ams_service_load_ability_process_test:unittest",
     "ams_service_startup_test:unittest",
+    "app_debug_info_test:unittest",
     "app_exit_reason_data_manager_test:unittest",
+    "app_launch_data_test:unittest",
     "app_lifecycle_deal_test:unittest",
     "app_mgr_client_test:unittest",
     "app_mgr_proxy_test:unittest",
@@ -343,6 +347,7 @@ group("unittest") {
     "app_mgr_service_test:unittest",
     "app_mgr_stub_test:unittest",
     "app_recovery_test:unittest",
+    "app_running_manager_test:unittest",
     "app_running_processes_info_test:unittest",
     "app_scheduler_host_test:unittest",
     "app_scheduler_proxy_test:unittest",
