--- a/frameworks/native/ability/BUILD.gn
+++ b/frameworks/native/ability/BUILD.gn
@@ -52,22 +52,26 @@ ohos_shared_library("ability_context_native") {
     "ability_runtime/js_extension_context.cpp",
     "ability_runtime/local_call_container.cpp",
     "ability_runtime/local_call_record.cpp",
+    "native/js_ui_extension_callback.cpp",
   ]
 
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
     "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
     "${ability_runtime_innerkits_path}/runtime:runtime",
+    "${ability_runtime_napi_path}/inner/napi_common:napi_common",
     "${ability_runtime_native_path}/ability/native:dialog_request_callback",
     "${ability_runtime_native_path}/appkit:app_context",
     "${ability_runtime_native_path}/appkit:app_context_utils",
   ]
 
   external_deps = [
+    "ability_base:base",
     "ability_base:session_info",
     "ability_base:want",
     "access_token:libaccesstoken_sdk",
     "access_token:libtoken_callback_sdk",
+    "ace_engine:ace_uicontent",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "faultloggerd:libdfx_dumpcatcher",
@@ -78,6 +82,7 @@ ohos_shared_library("ability_context_native") {
     "napi:ace_napi",
     "window_manager:libwsutils",
     "window_manager:scene_session",
+    "window_manager:session_manager",
   ]
 
   innerapi_tags = [ "platformsdk" ]
