Signed-off-by: yuwenze <yuwenze1@huawei.com> Change-Id: I1fdffc68d655e67aeecf2dd75d35d56dbb2aec41
Change-Id: Id7ac9b29a00018afd99082f858de7c5e619425e5

--- a/interfaces/inner_api/app_manager/BUILD.gn
+++ b/interfaces/inner_api/app_manager/BUILD.gn
@@ -108,7 +108,7 @@ ohos_shared_library("app_manager") {
   if (target_cpu == "arm") {
     cflags += [ "-DBINDER_IPC_32BIT" ]
   }
-  deps = []
+  deps = [ "${ability_runtime_path}/utils/global/freeze:freeze_util" ]
 
   external_deps = [
     "ability_base:configuration",
