--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -21,6 +21,7 @@ config("appmgr_config") {
     "${ability_runtime_services_path}/common/include",
     "${appspawn_path}/interfaces/innerkits/include",
     "${ability_runtime_path}/tools/aa/include",
+    "${ability_runtime_path}/utils/global/time/include",
     "${distributeddatamgr_path}/kv_store/interfaces/innerkits/distributeddatamgr/include",
   ]
 }
@@ -77,6 +78,7 @@ ohos_shared_library("libappms") {
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
+    "${ability_runtime_path}/utils/global/freeze:freeze_util",
     "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/common:perm_verification",
     "${ability_runtime_services_path}/common:task_handler_wrap",
