--- a/test/unittest/ams_service_event_drive_test/BUILD.gn
+++ b/test/unittest/ams_service_event_drive_test/BUILD.gn
@@ -54,6 +54,7 @@ ohos_unittest("AmsServiceEventDriveTest") {
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_innerkits_path}/deps_wrapper:ability_deps_wrapper",
     "${ability_runtime_innerkits_path}/uri_permission:uri_permission_mgr",
+    "${ability_runtime_path}/utils/global/freeze:freeze_util",
     "${ability_runtime_services_path}/appmgr:libappms",
     "${ability_runtime_services_path}/common:event_report",
     "${ability_runtime_services_path}/common:perm_verification",
