--- a/test/unittest/app_recovery_test/BUILD.gn
+++ b/test/unittest/app_recovery_test/BUILD.gn
@@ -39,6 +39,7 @@ ohos_unittest("AppRecoveryUnitTest") {
     "${ability_runtime_native_path}/appkit:app_context",
     "${ability_runtime_native_path}/appkit:app_context_utils",
     "${ability_runtime_native_path}/appkit:appkit_delegator",
+    "${ability_runtime_path}/utils/global/freeze:freeze_util",
     "${ability_runtime_services_path}/common:event_report",
     "${multimedia_path}/interfaces/innerkits:image_native",
     "${windowmanager_path}/dm:libdm",
