--- a/services/appmgr/BUILD.gn
+++ b/services/appmgr/BUILD.gn
@@ -107,7 +107,7 @@ ohos_shared_library("libappms") {
   ]
 
   if (product_name != "ohcore") {
-    external_deps += [ "netmanager_base:socket_permission" ]
+    external_deps += [ "netmanager_base:net_conn_manager_if" ]
   }
 
   if (ability_runtime_graphics) {
