attach UT code second
Signed-off-by: xinking129 <xinxin13@huawei.com>

--- a/test/unittest/ability_manager_service_first_test/BUILD.gn
+++ b/test/unittest/ability_manager_service_first_test/BUILD.gn
@@ -27,6 +27,7 @@ ohos_unittest("ability_manager_service_first_test") {
     "${ability_runtime_test_path}/mock/frameworks_kits_ability_native_test/include",
     "${ability_runtime_test_path}/mock/prepare_terminate_callback",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/aakit/include",
+    "${ability_runtime_test_path}/unittest/app_debug_listener_stub_test",
     "mock/include",
   ]
 
