--- a/test/unittest/ams_mgr_proxy_test/BUILD.gn
+++ b/test/unittest/ams_mgr_proxy_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -21,8 +21,11 @@ ohos_unittest("AmsMgrProxyTest") {
 
   include_dirs = [
     "${ability_runtime_innerkits_path}/app_manager/include/appmgr",
+    "${ability_runtime_services_path}/abilitymgr/include",
     "${ability_runtime_services_path}/appmgr/include",
     "${ability_runtime_test_path}/mock/services_appmgr_test/include",
+    "${ability_runtime_test_path}/unittest/ability_debug_response_stub_test",
+    "${ability_runtime_test_path}/unittest/app_debug_listener_stub_test",
   ]
 
   sources = [ "ams_mgr_proxy_test.cpp" ]
