--- a/test/unittest/app_debug_listener_proxy_test/BUILD.gn
+++ b/test/unittest/app_debug_listener_proxy_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
+# Copyright (c) 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -16,18 +16,15 @@ import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
 module_output_path = "ability_runtime/appmgrservice"
 
-ohos_unittest("AmsMgrStubTest") {
+ohos_unittest("AppDebugListenerProxyTest") {
   module_out_path = module_output_path
 
   include_dirs = [
-    "${ability_runtime_services_path}/abilitymgr/include",
     "${ability_runtime_services_path}/appmgr/include",
     "${ability_runtime_test_path}/mock/services_appmgr_test/include",
-    "${ability_runtime_test_path}/unittest/ability_debug_response_stub_test",
-    "${ability_runtime_test_path}/unittest/app_debug_listener_stub_test",
   ]
 
-  sources = [ "ams_mgr_stub_test.cpp" ]
+  sources = [ "app_debug_listener_proxy_test.cpp" ]
 
   deps = [
     "${ability_runtime_services_path}/appmgr:libappms",
@@ -37,21 +34,17 @@ ohos_unittest("AmsMgrStubTest") {
   ]
 
   external_deps = [
-    "ability_base:want",
     "ability_runtime:app_manager",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
-    "ffrt:libffrt",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "samgr:samgr_proxy",
-    "window_manager:libwm",
   ]
 }
 
 group("unittest") {
   testonly = true
 
-  deps = [ ":AmsMgrStubTest" ]
+  deps = [ ":AppDebugListenerProxyTest" ]
 }
