--- a/test/unittest/app_mgr_client_test/BUILD.gn
+++ b/test/unittest/app_mgr_client_test/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -25,10 +25,12 @@ ohos_unittest("AppMgrClientTest") {
   ]
 
   include_dirs = [
-    "${ability_runtime_test_path}/mock/common/include",
     "${ability_runtime_services_path}/abilitymgr/include",
-    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
     "${ability_runtime_services_path}/appmgr/test/unittest/mocks",
+    "${ability_runtime_test_path}/mock/common/include",
+    "${ability_runtime_test_path}/unittest/ability_debug_response_stub_test",
+    "${ability_runtime_test_path}/unittest/app_debug_listener_stub_test",
+    "${distributedschedule_path}/samgr/interfaces/innerkits/samgr_proxy/include",
   ]
 
   sources = [
