--- a/test/moduletest/common/ams/ability_running_record_test/BUILD.gn
+++ b/test/moduletest/common/ams/ability_running_record_test/BUILD.gn
@@ -34,6 +34,7 @@ ohos_moduletest("AmsAbilityRunningRecordModuleTest") {
     "hilog:libhilog",
     "ipc:ipc_core",
     "safwk:system_ability_fwk",
+    "window_manager:libwsutils",
   ]
 
   if (background_task_mgr_continuous_task_enable) {
