新增PC应用子进程管理napi
Signed-off-by: zhangyuhang72 <zhangyuhang72@huawei.com>
Change-Id: I56ada1f1fb85979b640e53315afc89c67551b6cc

--- a/frameworks/js/napi/BUILD.gn
+++ b/frameworks/js/napi/BUILD.gn
@@ -67,5 +67,7 @@ group("napi_packages") {
     "${ability_runtime_napi_path}/wantConstant:wantconstant_napi",
     "${ability_runtime_napi_path}/wantagent:napi_wantAgent",
     "${ability_runtime_napi_path}/wantagent:wantagent",
+    "${ability_runtime_napi_path}/js_child_process_manager:childprocessmanager_napi",
+    "${ability_runtime_napi_path}/js_child_process:childprocess_napi",
   ]
 }
