--- a/interfaces/inner_api/BUILD.gn
+++ b/interfaces/inner_api/BUILD.gn
@@ -24,5 +24,6 @@ group("innerkits_target") {
     "quick_fix:quickfix_manager",
     "uri_permission:uri_permission_mgr",
     "wantagent:wantagent_innerkits",
+    "child_process_manager:child_process_manager",
   ]
 }
