--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -78,6 +78,10 @@ ohos_shared_library("ability_manager") {
     "${ability_runtime_services_path}/abilitymgr/src/caller_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/extension_running_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/image_info.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/insight_intent_execute_callback_proxy.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/insight_intent_execute_callback_stub.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/insight_intent_execute_param.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/insight_intent_execute_result.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/launch_param.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/lifecycle_state_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/mission_listener_proxy.cpp",
