--- a/services/abilitymgr/abilitymgr.gni
+++ b/services/abilitymgr/abilitymgr.gni
@@ -103,6 +103,8 @@ abilityms_files = [
   "src/ability_auto_startup_data_manager.cpp",
   "src/ability_auto_startup_service.cpp",
   "src/auto_startup_info.cpp",
+  "src/insight_intent_execute_param.cpp",
+  "src/insight_intent_execute_result.cpp",
 ]
 
 if (ability_runtime_graphics) {
