--- a/frameworks/js/napi/insight_intent/insight_intent/BUILD.gn
+++ b/frameworks/js/napi/insight_intent/insight_intent/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
+# Copyright (c) 2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -14,55 +14,32 @@
 import("//build/ohos.gni")
 import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
-config("napi_common_public_config") {
-  include_dirs = [ "./" ]
-}
-
-ohos_shared_library("napi_common") {
-  include_dirs = [
-    "${ability_runtime_napi_path}/featureAbility",
-    "//third_party/node/src",
-  ]
-
-  public_configs = [
-    ":napi_common_public_config",
-    "${ability_runtime_native_path}/ability/native:ability_public_config",
-    "${ability_runtime_innerkits_path}/wantagent:wantagent_innerkits_public_config",
-  ]
-
+ohos_shared_library("insightintent_napi") {
   sources = [
-    "napi_common_configuration.cpp",
-    "napi_common_execute_param.cpp",
-    "napi_common_execute_result.cpp",
-    "napi_common_start_options.cpp",
-    "napi_common_util.cpp",
-    "napi_common_want.cpp",
+    "js_insight_intent.cpp",
+    "native_module.cpp",
   ]
+
+  configs = [ "${ability_runtime_services_path}/common:common_config" ]
 
   deps = [
-    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
     "${ability_runtime_innerkits_path}/runtime:runtime",
-    "//third_party/libuv:uv",
+    "${ability_runtime_napi_path}/inner/napi_common:napi_common",
+    "${ability_runtime_native_path}/ability/native:abilitykit_native",
   ]
 
   external_deps = [
     "ability_base:base",
-    "ability_base:configuration",
     "ability_base:want",
-    "access_token:libtokenid_sdk",
     "c_utils:utils",
     "common_event_service:cesfwk_innerkits",
     "hilog:libhilog",
     "ipc:ipc_core",
-    "ipc:ipc_napi_common",
     "napi:ace_napi",
   ]
 
-  if (ability_runtime_graphics) {
-    defines = [ "SUPPORT_GRAPHICS" ]
-  }
+  relative_install_dir = "module/app/ability"
 
-  innerapi_tags = [ "platformsdk" ]
   subsystem_name = "ability"
   part_name = "ability_runtime"
 }
