新增napi接口fork子进程,代码格式fix
Signed-off-by: zhangyuhang72 <zhangyuhang72@huawei.com>
Change-Id: I9f5a06be739b7d7b656a28989b86869eb9919cb6

--- a/frameworks/js/napi/js_child_process/BUILD.gn
+++ b/frameworks/js/napi/js_child_process/BUILD.gn
@@ -28,7 +28,8 @@ gen_js_obj("child_process_js") {
 }
 
 gen_js_obj("child_process_abc") {
-  input = get_label_info(":gen_child_process_abc", "target_out_dir") + "/child_process.abc"
+  input = get_label_info(":gen_child_process_abc", "target_out_dir") +
+          "/child_process.abc"
   output = target_out_dir + "/child_process_abc.o"
   dep = ":gen_child_process_abc"
 }
