--- a/frameworks/js/napi/js_child_process_manager/BUILD.gn
+++ b/frameworks/js/napi/js_child_process_manager/BUILD.gn
@@ -16,8 +16,8 @@ import("//foundation/ability/ability_runtime/ability_runtime.gni")
 
 ohos_shared_library("childprocessmanager_napi") {
   sources = [
-    "native_module.cpp",
     "js_child_process_manager.cpp",
+    "native_module.cpp",
   ]
 
   configs = [ "${ability_runtime_services_path}/common:common_config" ]
@@ -37,9 +37,7 @@ ohos_shared_library("childprocessmanager_napi") {
   ]
 
   if (ability_runtime_graphics) {
-    external_deps += [
-      "image_framework:image",
-    ]
+    external_deps += [ "image_framework:image" ]
   }
 
   relative_install_dir = "module/app/ability"
