--- a/frameworks/js/napi/js_child_process_manager/BUILD.gn
+++ b/frameworks/js/napi/js_child_process_manager/BUILD.gn
@@ -33,6 +33,7 @@ ohos_shared_library("childprocessmanager_napi") {
 
   external_deps = [
     "hilog:libhilog",
+    "init:libbegetutil",
     "napi:ace_napi",
   ]
 
