--- a/test/unittest/ability_debug_response_stub_test/BUILD.gn
+++ b/test/unittest/ability_debug_response_stub_test/BUILD.gn
@@ -32,6 +32,7 @@ ohos_unittest("ability_debug_response_stub_test") {
   configs = [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
 
   deps = [
+    "${ability_runtime_innerkits_path}/ability_manager:ability_manager",
     "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_services_path}/abilitymgr:abilityms",
     "//third_party/googletest:gmock_main",
@@ -42,8 +43,6 @@ ohos_unittest("ability_debug_response_stub_test") {
   external_deps = [
     "ability_base:session_info",
     "ability_base:want",
-    "ability_runtime:ability_manager",
-    "ability_runtime:runtime",
     "bundle_framework:appexecfwk_base",
     "c_utils:utils",
     "ffrt:libffrt",
