--- a/test/unittest/app_debug_info_test/BUILD.gn
+++ b/test/unittest/app_debug_info_test/BUILD.gn
@@ -27,6 +27,7 @@ ohos_unittest("AppDebugInfoTest") {
   sources = [ "app_debug_info_test.cpp" ]
 
   deps = [
+    "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_services_path}/appmgr:libappms",
     "${ability_runtime_services_path}/common:task_handler_wrap",
     "//third_party/googletest:gmock_main",
@@ -35,7 +36,6 @@ ohos_unittest("AppDebugInfoTest") {
 
   external_deps = [
     "ability_base:want",
-    "ability_runtime:app_manager",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
