child_process_manager改为单例
Signed-off-by: zhangyuhang72 <zhangyuhang72@huawei.com>
Change-Id: Ief2373a66d295ca3caf3dd83aecb51d51388baf7

--- a/interfaces/inner_api/child_process_manager/BUILD.gn
+++ b/interfaces/inner_api/child_process_manager/BUILD.gn
@@ -46,6 +46,7 @@ ohos_shared_library("child_process_manager") {
     "c_utils:utils",
     "eventhandler:libeventhandler",
     "hilog:libhilog",
+    "init:libbegetutil",
     "ipc:ipc_core",
     "napi:ace_napi",
     "samgr:samgr_proxy",
