--- a/test/unittest/app_debug_listener_proxy_test/BUILD.gn
+++ b/test/unittest/app_debug_listener_proxy_test/BUILD.gn
@@ -27,6 +27,7 @@ ohos_unittest("AppDebugListenerProxyTest") {
   sources = [ "app_debug_listener_proxy_test.cpp" ]
 
   deps = [
+    "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_services_path}/appmgr:libappms",
     "${ability_runtime_services_path}/common:task_handler_wrap",
     "//third_party/googletest:gmock_main",
@@ -34,7 +35,6 @@ ohos_unittest("AppDebugListenerProxyTest") {
   ]
 
   external_deps = [
-    "ability_runtime:app_manager",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
