--- a/test/unittest/app_debug_listener_stub_test/BUILD.gn
+++ b/test/unittest/app_debug_listener_stub_test/BUILD.gn
@@ -24,6 +24,7 @@ ohos_unittest("AppDebugListenerStubTest") {
   sources = [ "app_debug_listener_stub_test.cpp" ]
 
   deps = [
+    "${ability_runtime_innerkits_path}/app_manager:app_manager",
     "${ability_runtime_services_path}/appmgr:libappms",
     "${ability_runtime_services_path}/common:task_handler_wrap",
     "//third_party/googletest:gmock_main",
@@ -32,7 +33,6 @@ ohos_unittest("AppDebugListenerStubTest") {
 
   external_deps = [
     "ability_base:want",
-    "ability_runtime:app_manager",
     "appspawn:appspawn_socket_client",
     "bundle_framework:appexecfwk_base",
     "bundle_framework:appexecfwk_core",
