--- a/test/unittest/ams_app_workflow_test/BUILD.gn
+++ b/test/unittest/ams_app_workflow_test/BUILD.gn
@@ -41,6 +41,7 @@ ohos_unittest("AmsWorkFlowTest") {
     "${ability_runtime_services_path}/appmgr/src/module_running_record.cpp",
     "${ability_runtime_services_path}/appmgr/src/remote_client_manager.cpp",
     "${ability_runtime_services_path}/appmgr/src/window_focus_changed_listener.cpp",
+    "${ability_runtime_services_path}/appmgr/src/window_visibility_changed_listener.cpp",
   ]
 
   sources += [ "ams_workflow_test.cpp" ]
