--- a/test/unittest/ams_recent_app_list_test/BUILD.gn
+++ b/test/unittest/ams_recent_app_list_test/BUILD.gn
@@ -39,6 +39,7 @@ ohos_unittest("AmsRecentAppListTest") {
     "${ability_runtime_services_path}/appmgr/src/module_running_record.cpp",
     "${ability_runtime_services_path}/appmgr/src/remote_client_manager.cpp",
     "${ability_runtime_services_path}/appmgr/src/window_focus_changed_listener.cpp",
+    "${ability_runtime_services_path}/appmgr/src/window_visibility_changed_listener.cpp",
     "${ability_runtime_test_path}/mock/services_appmgr_test/src/mock_bundle_manager.cpp",
     "${ability_runtime_test_path}/mock/services_appmgr_test/src/mock_overlay_manager.cpp",
   ]
