Description: 支持x86_64编译 IssueNo: #I87B86 Sig: SIG_ApplicationFramework Feature or Bugfix: Feature Binary Source: No
Signed-off-by: yangzk <yangzhongkai@huawei.com>
Change-Id: Ib7cf9467fbfe1d5480cf134a18e1ef6ef63c676b

--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -62,6 +62,8 @@ config("ability_config") {
     defines += [ "APP_USE_ARM64" ]
   } else if (target_cpu == "arm") {
     defines += [ "APP_USE_ARM" ]
+  } else if (target_cpu == "x86_64") {
+    defines += [ "APP_USE_X86_64" ]
   }
 
   if (ability_runtime_graphics) {
