--- a/interfaces/inner_api/runtime/BUILD.gn
+++ b/interfaces/inner_api/runtime/BUILD.gn
@@ -27,6 +27,8 @@ config("runtime_config") {
     defines += [ "APP_USE_ARM64" ]
   } else if (target_cpu == "arm") {
     defines += [ "APP_USE_ARM" ]
+  } else if (target_cpu == "x86_64") {
+    defines += [ "APP_USE_X86_64" ]
   }
 
   include_dirs = []
