window visibility changed listener
Signed-off-by: xinking129 <xinxin13@huawei.com>

--- a/test/unittest/app_running_manager_test/BUILD.gn
+++ b/test/unittest/app_running_manager_test/BUILD.gn
@@ -23,10 +23,7 @@ ohos_unittest("app_running_manager_test") {
 
   configs = [ "${ability_runtime_services_path}/appmgr:appmgr_config" ]
 
-  sources = [
-    "${ability_runtime_services_path}/appmgr/src/window_visibility_changed_listener.cpp",
-  ]
-
+  sources = [ "${ability_runtime_services_path}/appmgr/src/window_visibility_changed_listener.cpp" ]
   sources += [ "app_running_manager_test.cpp" ]
 
   deps = [
