add other handle.
Signed-off-by: xinking129 <xinxin13@huawei.com>

--- a/frameworks/native/ability/native/BUILD.gn
+++ b/frameworks/native/ability/native/BUILD.gn
@@ -960,6 +960,31 @@ ohos_shared_library("share_extension_module") {
   part_name = "ability_runtime"
 }
 
+ohos_shared_library("auto_startup_callback") {
+  include_dirs = [ "${ability_runtime_path}/interfaces/kits/native/ability/native/ability_business_error" ]
+
+  sources = [
+    "${ability_runtime_native_path}/ability/native/auto_startup_callback_proxy.cpp",
+    "${ability_runtime_native_path}/ability/native/auto_startup_callback_stub.cpp",
+  ]
+
+  deps = [ "${ability_runtime_innerkits_path}/ability_manager:ability_manager" ]
+
+  configs = [ "${ability_runtime_services_path}/common:common_config" ]
+
+  external_deps = [
+    "ability_base:want",
+    "c_utils:utils",
+    "eventhandler:libeventhandler",
+    "hilog:libhilog",
+    "ipc:ipc_core",
+  ]
+
+  innerapi_tags = [ "platformsdk" ]
+  subsystem_name = "ability"
+  part_name = "ability_runtime"
+}
+
 ohos_shared_library("action_extension_module") {
   sources = [ "${ability_runtime_native_path}/ability/native/action_extension_ability/action_extension_module_loader.cpp" ]
 
