--- a/test/unittest/ui_ability_lifecycle_manager_test/BUILD.gn
+++ b/test/unittest/ui_ability_lifecycle_manager_test/BUILD.gn
@@ -28,7 +28,11 @@ ohos_unittest("ui_ability_lifecycle_manager_test") {
   public_configs =
       [ "${ability_runtime_services_path}/abilitymgr:abilityms_config" ]
 
-  sources = [ "ui_ability_lifecycle_manager_test.cpp" ]
+  sources = [
+    "${ability_runtime_services_path}/abilitymgr/src/ability_auto_startup_data_manager.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/ability_auto_startup_service.cpp",
+    "ui_ability_lifecycle_manager_test.cpp",
+  ]
 
   deps = [
     "${ability_runtime_innerkits_path}/ability_manager:ability_start_setting",
@@ -50,9 +54,11 @@ ohos_unittest("ui_ability_lifecycle_manager_test") {
     "c_utils:utils",
     "dsoftbus:softbus_client",
     "ffrt:libffrt",
+    "hilog:libhilog",
     "init:libbeget_proxy",
     "init:libbegetutil",
     "ipc:ipc_core",
+    "kv_store:distributeddata_inner",
     "napi:ace_napi",
     "safwk:system_ability_fwk",
     "samgr:samgr_proxy",
