--- a/interfaces/inner_api/ability_manager/BUILD.gn
+++ b/interfaces/inner_api/ability_manager/BUILD.gn
@@ -74,6 +74,7 @@ ohos_shared_library("ability_manager") {
     "${ability_runtime_services_path}/abilitymgr/src/ability_scheduler_stub.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/acquire_share_data_callback_proxy.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/acquire_share_data_callback_stub.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/auto_startup_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/caller_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/extension_running_info.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/image_info.cpp",
