--- a/test/unittest/data_ability_manager_test/BUILD.gn
+++ b/test/unittest/data_ability_manager_test/BUILD.gn
@@ -30,6 +30,8 @@ ohos_unittest("data_ability_manager_test") {
   ]
 
   sources = [
+    "${ability_runtime_services_path}/abilitymgr/src/ability_auto_startup_data_manager.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/ability_auto_startup_service.cpp",
     "${ability_runtime_services_path}/abilitymgr/src/app_scheduler.cpp",
     "data_ability_manager_test.cpp",  # add mock file
   ]
@@ -65,6 +67,7 @@ ohos_unittest("data_ability_manager_test") {
     "hitrace:hitrace_meter",
     "init:libbeget_proxy",
     "ipc:ipc_core",
+    "kv_store:distributeddata_inner",
     "napi:ace_napi",
   ]
 
