--- a/test/unittest/form_extension_context_test/BUILD.gn
+++ b/test/unittest/form_extension_context_test/BUILD.gn
@@ -26,6 +26,8 @@ ohos_unittest("form_extension_context_test") {
   ]
 
   sources = [
+    "${ability_runtime_services_path}/abilitymgr/src/ability_auto_startup_data_manager.cpp",
+    "${ability_runtime_services_path}/abilitymgr/src/ability_auto_startup_service.cpp",
     "${ability_runtime_test_path}/mock/services_abilitymgr_test/libs/appexecfwk_core/src/appmgr/mock_app_scheduler.cpp",
     "form_extension_context_test.cpp",  # add mock file
   ]
@@ -67,6 +69,7 @@ ohos_unittest("form_extension_context_test") {
     "hitrace:hitrace_meter",
     "init:libbeget_proxy",
     "ipc:ipc_core",
+    "kv_store:distributeddata_inner",
     "napi:ace_napi",
     "relational_store:native_dataability",
     "relational_store:native_rdb",
